--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # repository -> settings ->secrets
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # find or create here "My Security Credentials"
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # put in repository -> settings -> secrets
           aws-region: us-east-2
       # SAM build
       - run: sam build --use-container
 
-      # SAM deploy ---
+      # SAM deploy
       - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket testtaskunkd --capabilities CAPABILITY_IAM --region us-east-2
